src/fabric8/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-http-jolokia
  name: spring-boot-http-jolokia
spec:
  ports:
  - name: jolokia
    port: 8778
    targetPort: 8778
  selector:
    app: spring-boot-rest-http
