src/fabric8/jolokia-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: spring-boot-http-jolokia
spec:
  to:
    name: spring-boot-http-jolokia
  tls:
      termination: passthrough
